--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="module" src="./linked-list/index.js"></script>
+    <script type="module" src="./linkedList/index.js"></script>
 </head>
 <body>
     <h1>Data structure and algorithm</h1>
