sort array by child array

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script type="module" src="./linkedList/index.js"></script>
+    <script type="module" src="./sort/sortByRequirement.js"></script>
 </head>
 <body>
     <h1>Data structure and algorithm</h1>
