--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="module" src="./linkedList/index.js"></script>
-    <script type="module" src="./sort/sortByRequirement.js"></script>
-</head>
+    <!-- <script src="./linkedList/index.js"></script>
+    <script src="./sort/sortByRequirement.js"></script> -->
+    <!-- <script src="./coding/fibonacci.js"></script> -->
+    <script src="./coding/fizzBuzz.js"></script>
 <body>
     <h1>Data structure and algorithm</h1>
 </body>
