--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <script src="./linkedList/index.js"></script>
-    <script src="./sort/sortByRequirement.js"></script> -->
-    <!-- <script src="./coding/fibonacci.js"></script> -->
-    <script src="./coding/fizzBuzz.js"></script>
+    <script src="./sort/sortByRequirement.js"></script> 
+    <script src="./coding/fibonacci.js"></script>
+    <script src="./coding/fizzBuzz.js"></script> 
+    <script src="./sort/insertionSort.js"></script>-->
+    <script src="./sort/selectionSort.js"></script>
 <body>
     <h1>Data structure and algorithm</h1>
 </body>
