--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <script src="./coding/fibonacci.js"></script>
     <script src="./coding/fizzBuzz.js"></script> 
     <script src="./sort/insertionSort.js"></script>
-    <script src="./sort/selectionSort.js"></script>-->
-    <script src="./coding/contains.js"></script>
+    <script src="./sort/selectionSort.js"></script>
+    <script src="./coding/contains.js"></script>-->
+    <script src="./map/map.js"></script>
 <body>
     <h1>Data structure and algorithm</h1>
 </body>
