--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="./sort/selectionSort.js"></script>
     <script src="./coding/contains.js"></script>-->
     <script src="./map/map.js"></script>
+    <script src="./coding/replace.js"></script>
 <body>
     <h1>Data structure and algorithm</h1>
 </body>
