--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <script src="./linkedList/index.js"></script>
-    <script src="./sort/sortByRequirement.js"></script> 
-    <script src="./coding/fibonacci.js"></script>
-    <script src="./coding/fizzBuzz.js"></script> 
-    <script src="./sort/insertionSort.js"></script>
-    <script src="./sort/selectionSort.js"></script>
-    <script src="./coding/contains.js"></script>-->
-    <script src="./map/map.js"></script>
-    <script src="./coding/replace.js"></script>
+    <script src="./dist/main.js"></script>
 <body>
     <h1>Data structure and algorithm</h1>
 </body>
